--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey="></script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>고독한 시식가</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
+		#root {
+			width: 100vw;
+			height: 100vh;
+		}
+	</style>
 </head>
 <body>
 	<div id="root"></div>
